Added badges and regenerated markdowns.

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,8 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
-# natverse
+
+# natverse <a href='https://natverse.github.io/'><img src='presentation/natverse_logo.png' align="right" height="138.5" /></a>
 
 <!-- badges: start -->
 <!-- badges: end -->
