--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# natverse <a href='https://natverse.github.io/'><img src='presentation/natverse_logo.png' align="right" height="138.5" /></a>
+# natverse <a href='https://natverse.github.io/'><img src='man/figures/logo.svg' align="right" height="138.5" /></a>
 
 <!-- badges: start -->
 <!-- badges: end -->
