--- a/data-raw/natverse.bib
+++ b/data-raw/natverse.bib
@@ -1,10 +1,10 @@
-@article {Manton006353,
-	author = {Manton, James D. and Bates, Alexander Shakeel and Jagannathan, Sridhar R. and Costa, Marta and Schlegel, Philipp and Rohlfing, Torsten and Jefferis, Gregory S. X. E.},
+@article {Bates006353,
+	author = {Bates, Alexander S. and Manton, James D. and Jagannathan, Sridhar R. and Costa, Marta and Schlegel, Philipp and Rohlfing, Torsten and Jefferis, Gregory S. X. E.},
 	title = {The natverse: a versatile computational toolbox to combine and analyse neuroanatomical data},
 	elocation-id = {006353},
 	year = {2019},
 	doi = {10.1101/006353},
 	publisher = {Cold Spring Harbor Laboratory},
-	URL = {https://www.biorxiv.org/content/early/2019/09/27/006353},
+	URL = {https://www.biorxiv.org/content/early/2019/11/07/006353},
 	journal = {bioRxiv}
 }
