--- a/data-raw/natverse.bib
+++ b/data-raw/natverse.bib
@@ -1,10 +1,9 @@
-@article {Bates006353,
-	author = {Bates, Alexander S. and Manton, James D. and Jagannathan, Sridhar R. and Costa, Marta and Schlegel, Philipp and Rohlfing, Torsten and Jefferis, Gregory S. X. E.},
-	title = {The natverse: a versatile computational toolbox to combine and analyse neuroanatomical data},
-	elocation-id = {006353},
-	year = {2019},
-	doi = {10.1101/006353},
-	publisher = {Cold Spring Harbor Laboratory},
-	URL = {https://www.biorxiv.org/content/early/2019/11/07/006353},
-	journal = {bioRxiv}
-}
+@article{Bates:2020aa,
+	Author = {Bates, Alexander Shakeel and Manton, James D. and Jagannathan, Sridhar R. and Costa, Marta and Schlegel, Philipp and Rohlfing, Torsten and Jefferis, Gregory S. X. E.},
+	Journal = {Elife},
+	Month = {Apr},
+	Title = {The natverse, a versatile toolbox for combining and analysing neuroanatomical data},
+	Volume = {9},
+	Year = {2020},
+	Doi = {10.7554/eLife.53350},
+	Url = {https://doi.org/10.7554/eLife.53350}}
